[gd_scene load_steps=11 format=2]

[ext_resource path="res://characters/player/Player.gd" type="Script" id=1]
[ext_resource path="res://characters/player/player_capsuleshape2d.tres" type="Shape2D" id=2]
[ext_resource path="res://interface/inventory/Inventory.tscn" type="PackedScene" id=3]
[ext_resource path="res://themes/debug/debug.tres" type="Theme" id=4]
[ext_resource path="res://fonts/m3x6/m3x6.tres" type="DynamicFont" id=5]
[ext_resource path="res://characters/player/equipment/Equipment.tscn" type="PackedScene" id=6]
[ext_resource path="res://characters/player/equipment/Equipment.gd" type="Script" id=7]
[ext_resource path="res://characters/player/body/head/down.png" type="Texture" id=8]
[ext_resource path="res://characters/player/body/torso/torso.png" type="Texture" id=9]
[ext_resource path="res://characters/player/body/legs/down.png" type="Texture" id=10]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="InventoryLayer" type="CanvasLayer" parent="."]

[node name="Inventory" parent="InventoryLayer" instance=ExtResource( 3 )]
contents = {

}

[node name="DebugLayer" type="CanvasLayer" parent="."]
layer = 99

[node name="DebugOverlay" type="Control" parent="DebugLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="DebugLayer/DebugOverlay"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="DebugLayer/DebugOverlay/HBoxContainer"]
editor/display_folded = true
margin_right = 64.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PositionDisplay" type="HBoxContainer" parent="DebugLayer/DebugOverlay/HBoxContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 8.0

[node name="Label" type="Label" parent="DebugLayer/DebugOverlay/HBoxContainer/VBoxContainer/PositionDisplay"]
margin_right = 4.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 5 )
text = "p"

[node name="Label2" type="Label" parent="DebugLayer/DebugOverlay/HBoxContainer/VBoxContainer/PositionDisplay"]
margin_left = 8.0
margin_right = 29.0
margin_bottom = 8.0
text = "(0, 0)"

[node name="VelocityDisplay" type="HBoxContainer" parent="DebugLayer/DebugOverlay/HBoxContainer/VBoxContainer"]
margin_top = 12.0
margin_right = 64.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="DebugLayer/DebugOverlay/HBoxContainer/VBoxContainer/VelocityDisplay"]
margin_right = 4.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 5 )
text = "v"

[node name="Label2" type="Label" parent="DebugLayer/DebugOverlay/HBoxContainer/VBoxContainer/VelocityDisplay"]
margin_left = 8.0
margin_right = 29.0
margin_bottom = 8.0
text = "(0, 0)"

[node name="StateDisplay" type="HBoxContainer" parent="DebugLayer/DebugOverlay/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 64.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="DebugLayer/DebugOverlay/HBoxContainer/VBoxContainer/StateDisplay"]
margin_right = 4.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 5 )
text = "s"

[node name="Label2" type="Label" parent="DebugLayer/DebugOverlay/HBoxContainer/VBoxContainer/StateDisplay"]
margin_left = 8.0
margin_right = 55.0
margin_bottom = 8.0
text = "State.Normal"

[node name="DirectionDisplay" type="HBoxContainer" parent="DebugLayer/DebugOverlay/HBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 64.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="DebugLayer/DebugOverlay/HBoxContainer/VBoxContainer/DirectionDisplay"]
margin_right = 4.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 5 )
text = "d"

[node name="Label2" type="Label" parent="DebugLayer/DebugOverlay/HBoxContainer/VBoxContainer/DirectionDisplay"]
margin_left = 8.0
margin_right = 29.0
margin_bottom = 8.0
text = "(0, 0)"

[node name="Equipment" parent="." instance=ExtResource( 6 )]
script = ExtResource( 7 )

[node name="Body" type="Node2D" parent="."]

[node name="Head" type="Node2D" parent="Body"]

[node name="Sprite" type="Sprite" parent="Body/Head"]
z_index = 1
texture = ExtResource( 8 )

[node name="Torso" type="Node2D" parent="Body"]

[node name="Sprite" type="Sprite" parent="Body/Torso"]
texture = ExtResource( 9 )

[node name="Legs" type="Node2D" parent="Body"]

[node name="Sprite" type="Sprite" parent="Body/Legs"]
texture = ExtResource( 10 )

[node name="Arms" type="Node2D" parent="Body"]

[node name="Left" type="Node2D" parent="Body/Arms"]

[node name="Sprite" type="Sprite" parent="Body/Arms/Left"]

[node name="Right" type="Node2D" parent="Body/Arms"]
